--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 spring.redis.host=${REDIS_HOST:localhost}
 second-best=Richard
 first-best=Eva of course
-first-best-job=Galactic President
+first-best-job=Galactica
